--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,71 @@
-html,
+html {
+    scroll-behavior: smooth;
+}
 body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+:root {
+    --yellow: #FAFF00;
+    --blue: #003FE1;
+    --blue-dark: #0038C9;
+    --green: #3CF04E;
+    --black: #000000;
+    --white: #FFFFFF;
 }
 
 * {
   box-sizing: border-box;
+}
+
+a {
+    color: inherit;
+    text-decoration: inherit;
+}
+
+/* === TYPOS === */
+h1, h2, h3 {
+    font-family: 'Franklin Gothic Heavy', 'Segoe UI', 'Roboto', Arial;
+    margin: 0;
+    text-transform: uppercase;
+}
+h1 {
+    font-size: 58px;
+}
+h2 {
+    font-size: 34px;
+}
+h3 {
+    font-family: 'Roboto', Arial;
+    font-size: 24px;
+}
+h4 {
+    font-family: 'Roboto', Arial;
+    font-size: 18px;
+    margin: 0;
+}
+p {
+    margin: 0;
+    padding: 0;
+    font-size: 16px;
+    line-height: 24px;
+    font-weight: 600;
+    text-transform: uppercase;
+}
+@media screen and (max-width: 700px) {
+    h1 {
+        font-size: 2.5em;
+        max-width: 80%;
+        margin: 0 auto;
+    }
+    h2 {
+        font-size: 1.75em;
+        max-width: 80%;
+        margin: 0 auto;
+    }
 }
